--- a/services.html
+++ b/services.html
@@ -31,6 +31,57 @@
           </form>
         </div>
       </section>
+      <section class="main">
+        <div class="container fs16">
+          <article class="main-col">
+            <h1 class="page-title">Services</h1>
+            <ul class="services">
+              <li>
+                <h3>Front-end Course</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Officiis dolorem rem consectetur, sed autem delectus et nam
+                  fugiat dignissimos minima similique illum assumenda hic
+                  exercitationem.
+                </p>
+                <p>Price : 25,000THB</p>
+              </li>
+              <li>
+                <h3>Back-end Course</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Officiis dolorem rem consectetur, sed autem delectus et nam
+                  fugiat dignissimos minima similique illum assumenda hic
+                  exercitationem.
+                </p>
+                <p>Price : 35,000THB</p>
+              </li>
+              <li>
+                <h3>Dev-Ops Course</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Officiis dolorem rem consectetur, sed autem delectus et nam
+                  fugiat dignissimos minima similique illum assumenda hic
+                  exercitationem.
+                </p>
+                <p>Price : 25,000THB</p>
+              </li>
+            </ul>
+          </article>
+          <aside class="sidebar">
+            <h3>Get a Quote!!</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. At omnis
+              ipsum veritatis corporis fugit nam ducimus consequuntur! Eaque
+              libero molestias tempore exercitationem laborum quas repellat
+              sapiente, qui dolorem sint velit.
+            </p>
+          </aside>
+        </div>
+      </section>
+      <footer>
+        <p>CodeCamp Corp., Copyright &copy; 2021</p>
+      </footer>
     
 </body>
 </html>
